--- a/derek -try final workflow.ipynb
+++ b/derek -try final workflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -936,7 +936,11 @@
     "def getQuestionType(question):\n",
     "    if 'Who' in question:\n",
     "        return \"PERSON\"\n",
+    "    if 'whom' in question:\n",
+    "        return \"PERSON\"\n",
     "    if 'where' in question:\n",
+    "        return \"LOCATION\"\n",
+    "    if 'what place' in question:\n",
     "        return \"LOCATION\"\n",
     "    if 'How many' in question:\n",
     "        return \"NUMBER\"\n",
@@ -954,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -995,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -1042,7 +1046,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# First, answers whose content words all appear in the question should be ranked lowest.\n",
+    "\n",
+    "def first_filter_object_stop(question, answer_entities):\n",
+    "   \n",
+    "    ranked_list = []\n",
+    "    \n",
+    "    question = set(pre_process_tf_idf(question))\n",
+    "    \n",
+    "#     print question\n",
+    "#     print\n",
+    "    \n",
+    "    for entity in answer_entities:\n",
+    "\n",
+    "        raw_span = entity[0]\n",
+    "        span_tag = entity[1]\n",
+    "        \n",
+    "        set_span = set(pre_process_tf_idf(raw_span))\n",
+    "        \n",
+    "        if span_tag !=\"PUNC\": #span_tag != \"O\" and\n",
+    "            \n",
+    "            if span_tag == \"O\" or span_tag == \"STOPWORD\":\n",
+    "                \n",
+    "                if len(set_span) > 2:\n",
+    "                    \n",
+    "                    ranked_list.append([entity, 0])\n",
+    "            \n",
+    "            elif set_span.issubset(question):\n",
+    "                \n",
+    "                ranked_list.append([entity, 1])\n",
+    "#                 print \"IN\", raw_span, span_tag, set_span, question\n",
+    "                \n",
+    "            else:\n",
+    "                \n",
+    "                ranked_list.append([entity, 2])\n",
+    "#                 print \"OUT\", raw_span, span_tag, set_span, question\n",
+    "    \n",
+    "    return sorted(ranked_list, key=lambda x: x[1], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -1076,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -1100,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -1188,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -1212,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -1223,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -1262,7 +1313,7 @@
     "        \n",
     "        else:\n",
     "            \n",
-    "            first_pass = first_filter_object(question, result_b[\"candidates\"])\n",
+    "            first_pass = first_filter_object_stop(question, result_b[\"candidates\"])\n",
     "\n",
     "            second_pass = second_filter(question, first_pass)\n",
     "\n",
@@ -1303,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -1321,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -1358,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -1383,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -1408,11 +1459,11 @@
       "        'sentence_index': 149,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  34\n",
-      "Rank Wrong:  370\n",
+      "Rank Correct:  35\n",
+      "Rank Wrong:  369\n",
       "Rank Total:  404\n",
-      "Rank Overall Average %:  0.0841584158416\n",
-      "Rank Correct Average of Previous %:  0.507462686567\n",
+      "Rank Overall Average %:  0.0866336633663\n",
+      "Rank Correct Average of Previous %:  0.522388059701\n",
       "\n"
      ]
     }
@@ -1423,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -1448,11 +1499,11 @@
       "        'sentence_index': 149,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  10007\n",
-      "Rank Wrong:  60152\n",
+      "Rank Correct:  10166\n",
+      "Rank Wrong:  59993\n",
       "Rank Total:  70159\n",
-      "Rank Overall Average %:  0.142633161818\n",
-      "Rank Correct Average of Previous %:  0.49867942393\n",
+      "Rank Overall Average %:  0.144899442694\n",
+      "Rank Correct Average of Previous %:  0.506602880351\n",
       "\n"
      ]
     }
@@ -1463,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -1494,11 +1545,11 @@
       "        'sentence_index': 71,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  1139\n",
-      "Rank Wrong:  7324\n",
+      "Rank Correct:  1159\n",
+      "Rank Wrong:  7304\n",
       "Rank Total:  8463\n",
-      "Rank Overall Average %:  0.134585844263\n",
-      "Rank Correct Average of Previous %:  0.471635610766\n",
+      "Rank Overall Average %:  0.136949072433\n",
+      "Rank Correct Average of Previous %:  0.479917184265\n",
       "\n"
      ]
     }
@@ -1509,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -1570,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1621,10 +1672,10 @@
       "\n",
       "Ranked Answers: (Part C)\n",
       "\n",
-      "[   [(u'20th century', 'NUMBER'), 1.6500000000000001],\n",
-      "    [(u'late 1880s', 'NUMBER'), 1.05],\n",
-      "    [(u'1920s\\u2013by', 'NUMBER'), 0.9375],\n",
-      "    [(u'late 1920s', 'NUMBER'), 0.8250000000000001]]\n",
+      "[   [(u'20th century', 'NUMBER'), 1.4500000000000002],\n",
+      "    [(u'late 1880s', 'NUMBER'), 0.85],\n",
+      "    [(u'1920s\\u2013by', 'NUMBER'), 0.75],\n",
+      "    [(u'late 1920s', 'NUMBER'), 0.6499999999999999]]\n",
       "\n",
       "Predicted Answer: (Part C)\n",
       "\n",
@@ -1642,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -1675,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -1713,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -1724,32 +1775,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "process_submit(\"test\", DATA)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "set(['!', '#', '\"', '%', '$', \"'\", '&', ')', '(', '+', '*', '-', ',', '/', '.', ';', ':', '=', '<', '?', '>', '@', '[', ']', '\\\\', '_', '^', '`', '{', '}', '|', '~'])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print punct_tokens"
    ]
   },
   {
@@ -1763,6 +1795,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
