--- a/Basic QA system - Enhancements.ipynb
+++ b/Basic QA system - Enhancements.ipynb
@@ -1179,7 +1179,8 @@
     "    tagged_sent = nltk.pos_tag(lemmatized_sentence)\n",
     "    final = []\n",
     "    for word, tag in tagged_sent:\n",
-    "        if \"V\" in tag or \"NN\" in tag:\n",
+    "        #exapnd the open-class word to noun,verb,adj and adv\n",
+    "        if \"V\" in tag or \"NN\" in tag or 'JJ' in tag or 'RB' in tag:\n",
     "#             final.append((word,tag))\n",
     "            final.append(word)\n",
     "            \n",
@@ -2201,9 +2202,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [py27]",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "Python [py27]"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
