--- a/Basic QA system - Final Workflow_alex_added.ipynb
+++ b/Basic QA system - Final Workflow_alex_added.ipynb
@@ -1767,9 +1767,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [py27]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [py27]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1781,7 +1781,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
