Reworked/cleaned up part c workflow for supervised enhancement.

--- a/Basic QA system - Enhancements.ipynb
+++ b/Basic QA system - Enhancements.ipynb
@@ -1833,7 +1833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 118,
    "metadata": {
     "collapsed": true
    },
@@ -1844,82 +1844,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 119,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_result(fourth_pass):\n",
+    "    top_answer = fourth_pass[0]\n",
+    "    predicted_answer = top_answer[0][0]    \n",
+    "    \n",
+    "    return predicted_answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def multi_pass(first_filter_funcs, question, candidates, mem=None):\n",
+    "    \n",
+    "    if len(first_filter_funcs) > 0:\n",
+    "    \n",
+    "        first_pass = first_filter_funcs.pop(0)(question, candidates)\n",
+    "\n",
+    "        second_pass = second_filter(question, first_pass)\n",
+    "\n",
+    "        third_pass = third_filter(question, candidates, second_pass)\n",
+    "\n",
+    "        fourth_pass = reduce_rank(third_pass)\n",
+    "\n",
+    "        if len(fourth_pass) > 0:\n",
+    "            \n",
+    "            predicted_answer = get_result(fourth_pass)\n",
+    "            \n",
+    "            return [fourth_pass, third_pass, predicted_answer]\n",
+    "        else:\n",
+    "            return multi_pass(first_filter_funcs, question, candidates, [fourth_pass, third_pass])\n",
+    "    else:\n",
+    "        \n",
+    "        hits = [x for x in candidates if x[1] != \"PUNC\" or x[1] == \"STOPWORDS\"]                        \n",
+    "        predicted_answer = random.choice(hits)[0]\n",
+    "        \n",
+    "        return mem + [predicted_answer]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def generate_part_c_output(name, data, args):\n",
-    "    \n",
-    "    part_c_output = []\n",
-    "\n",
+    "        \n",
     "    question_set = data[name][\"question_set\"]\n",
     "    document_set = data[name][\"document_set\"]\n",
+    "    \n",
+    "    part_c_output = []\n",
+    "    \n",
+    "    cached = args.get(\"cached\")\n",
+    "    \n",
+    "    cache_dict = None\n",
+    "    \n",
+    "    if cached:\n",
+    "        \n",
+    "        cache_dict = data[name][\"part_c_cache_dict\"]\n",
+    "        \n",
+    "    else:\n",
+    "        \n",
+    "        cache_dict = {}\n",
+    "        \n",
+    "        cache_dict[\"pass_cache\"] = []\n",
+    "        \n",
+    "#         if use_enhancement:\n",
+    "            \n",
+    "#             cache_dict[\"enhancement_cache\"] = []    \n",
     "        \n",
     "    b_output_answer_set = data[name][\"b_output_answer_set\"]\n",
     "    \n",
-    "    for result_b in b_output_answer_set:\n",
+    "    for i, result_b in enumerate(b_output_answer_set):\n",
     "        \n",
+    "        predicted_answer = None        \n",
     "        question = question_set[result_b[\"set_index\"]][result_b[\"question_index\"]][\"question\"]\n",
     "        \n",
-    "        first_pass = first_filter(question, result_b[\"candidates\"])\n",
-    "        \n",
-    "        second_pass = second_filter(question, first_pass)\n",
-    "        \n",
-    "        third_pass = third_filter(question, result_b[\"candidates\"], second_pass)\n",
-    "        \n",
-    "        fourth_pass = reduce_rank(third_pass)\n",
-    "                \n",
-    "#         pp.pprint(third_pass)\n",
-    "\n",
-    "        predicted_answer = None\n",
-    "\n",
-    "        if len(fourth_pass) > 0:\n",
-    "\n",
-    "            top_answer = fourth_pass[0]\n",
-    "    #         pp.pprint(top_answer)        \n",
-    "            predicted_answer = top_answer[0][0]\n",
-    "        \n",
+    "        if cached:\n",
+    "            \n",
+    "            (fourth_pass, third_pass, predicted_answer) = cache_dict[\"pass_cache\"][i]\n",
+    "            \n",
     "        else:\n",
+    "            (fourth_pass, third_pass, predicted_answer) = multi_pass([first_filter, first_filter_object, first_filter_object_stop], question, result_b[\"candidates\"])\n",
     "            \n",
-    "            first_pass = first_filter_object(question, result_b[\"candidates\"])\n",
-    "\n",
-    "            second_pass = second_filter(question, first_pass)\n",
-    "\n",
-    "            third_pass = third_filter(question, result_b[\"candidates\"], second_pass)\n",
-    "\n",
-    "            fourth_pass = reduce_rank(third_pass)   \n",
-    "            \n",
-    "            if len(fourth_pass) > 0:\n",
-    "\n",
-    "                top_answer = fourth_pass[0]\n",
-    "        #         pp.pprint(top_answer)        \n",
-    "                predicted_answer = top_answer[0][0]\n",
-    "            \n",
-    "            else:\n",
-    "                \n",
-    "                first_pass = first_filter_object_stop(question, result_b[\"candidates\"])\n",
-    "\n",
-    "                second_pass = second_filter(question, first_pass)\n",
-    "\n",
-    "                third_pass = third_filter(question, result_b[\"candidates\"], second_pass)\n",
-    "\n",
-    "                fourth_pass = reduce_rank(third_pass)   \n",
-    "\n",
-    "                if len(fourth_pass) > 0:\n",
-    "\n",
-    "                    top_answer = fourth_pass[0]\n",
-    "            #         pp.pprint(top_answer)        \n",
-    "                    predicted_answer = top_answer[0][0]                \n",
-    "                \n",
-    "                else:\n",
-    "\n",
-    "        #         pp.pprint(top_answer)        \n",
-    "                    hits = [x for x in result_b[\"candidates\"] if x[1] != \"PUNC\" or x[1] == \"STOPWORDS\"]                        \n",
-    "                    predicted_answer = random.choice(hits)[0]\n",
-    "    \n",
-    "        full_question = question_set[result_b[\"set_index\"]][result_b[\"question_index\"]]\n",
+    "            cache_dict[\"pass_cache\"].append((fourth_pass, third_pass, predicted_answer))\n",
     "        \n",
     "        predicted_answer = predicted_answer.replace(\" %\", \"%\").replace(\"$ \", \"$\")\n",
     "\n",
@@ -1935,12 +1955,17 @@
     "        \n",
     "        part_c_output.append(result_c)        \n",
     "\n",
+    "           \n",
+    "    if not cached:\n",
+    "        \n",
+    "        data[name][\"part_c_cache_dict\"] = cache_dict        \n",
+    "        \n",
     "    return part_c_output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 156,
    "metadata": {
     "collapsed": true
    },
@@ -1958,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 157,
    "metadata": {
     "collapsed": true
    },
@@ -1996,7 +2021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 160,
    "metadata": {
     "collapsed": true
    },
@@ -2021,7 +2046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 162,
    "metadata": {
     "collapsed": false
    },
@@ -2061,12 +2086,12 @@
     }
    ],
    "source": [
-    "process_rank(\"rapid\", DATA, True)"
+    "process_rank(\"rapid\", DATA, True, {\"cached\" : True})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 165,
    "metadata": {
     "collapsed": false
    },
@@ -2107,17 +2132,17 @@
       "                                         2,\n",
       "                                         0.08333333333333333]]}]\n",
       "\n",
-      "Rank Correct:  1276\n",
-      "Rank Wrong:  7187\n",
+      "Rank Correct:  1275\n",
+      "Rank Wrong:  7188\n",
       "Rank Total:  8463\n",
-      "Rank Overall Average %:  0.150773957226\n",
-      "Rank Correct Average of Previous %:  0.448348559382\n",
+      "Rank Overall Average %:  0.150655795817\n",
+      "Rank Correct Average of Previous %:  0.447997189037\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "process_rank(\"dev\", DATA, True)"
+    "process_rank(\"dev\", DATA, True, {\"cached\": True})"
    ]
   },
   {
